apollo-federation/src/connectors/json_selection/snapshots/spread_parsing_spread_a_sub_b_spread_c.snap
---
source: apollo-federation/src/connectors/json_selection/parser.rs
expression: "selection!(\"...a{b...c}\", spec)"
---
JSONSelection {
    inner: Named(
        SubSelection {
            selections: [
                NamedSelection {
                    prefix: Spread(
                        Some(
                            0..3,
                        ),
                    ),
                    path: WithRange {
                        node: Path(
                            PathSelection {
                                path: WithRange {
                                    node: Key(
                                        WithRange {
                                            node: Field(
                                                "a",
                                            ),
                                            range: Some(
                                                3..4,
                                            ),
                                        },
                                        WithRange {
                                            node: Selection(
                                                SubSelection {
                                                    selections: [
                                                        NamedSelection {
                                                            prefix: None,
                                                            path: WithRange {
                                                                node: Path(
                                                                    PathSelection {
                                                                        path: WithRange {
                                                                            node: Key(
                                                                                WithRange {
                                                                                    node: Field(
                                                                                        "b",
                                                                                    ),
                                                                                    range: Some(
                                                                                        5..6,
                                                                                    ),
                                                                                },
                                                                                WithRange {
                                                                                    node: Empty,
                                                                                    range: Some(
                                                                                        6..6,
                                                                                    ),
                                                                                },
                                                                            ),
                                                                            range: Some(
                                                                                5..6,
                                                                            ),
                                                                        },
                                                                    },
                                                                ),
                                                                range: Some(
                                                                    5..6,
                                                                ),
                                                            },
                                                        },
                                                        NamedSelection {
                                                            prefix: Spread(
                                                                Some(
                                                                    6..9,
                                                                ),
                                                            ),
                                                            path: WithRange {
                                                                node: Path(
                                                                    PathSelection {
                                                                        path: WithRange {
                                                                            node: Key(
                                                                                WithRange {
                                                                                    node: Field(
                                                                                        "c",
                                                                                    ),
                                                                                    range: Some(
                                                                                        9..10,
                                                                                    ),
                                                                                },
                                                                                WithRange {
                                                                                    node: Empty,
                                                                                    range: Some(
                                                                                        10..10,
                                                                                    ),
                                                                                },
                                                                            ),
                                                                            range: Some(
                                                                                9..10,
                                                                            ),
                                                                        },
                                                                    },
                                                                ),
                                                                range: Some(
                                                                    9..10,
                                                                ),
                                                            },
                                                        },
                                                    ],
                                                    range: Some(
                                                        4..11,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                4..11,
                                            ),
                                        },
                                    ),
                                    range: Some(
                                        3..11,
                                    ),
                                },
                            },
                        ),
                        range: Some(
                            3..11,
                        ),
                    },
                },
            ],
            range: Some(
                0..11,
            ),
        },
    ),
    spec: V0_4,
}
